--- a/sites/all/modules/overlay_site/overlay_site.css
+++ b/sites/all/modules/overlay_site/overlay_site.css
@@ -5,8 +5,8 @@
     opacity: 0.765;
     pointer-events: none;
     position: absolute;
-    right: 0;
-    top: 0;
+   right: 28px;
+    top: 1px;
     width: 960px;
     z-index: 10;
 }
